# projeto_streamlit_cd_clientes

./: Cadastros.py  clientes.csv  pyproject.toml
pages/: Consulta.py
