[tool.poetry]
name = "projeto-na-pratica-st"
version = "0.1.0"
description = ""
authors = ["Robenildo Avelino <robenik21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
